<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Weekday Widget</string>
    <string name="widget_name">Date Widget</string>
    <string name="default_day">Monday</string>
    <string name="configure_widget">Configure Widget</string>
    <string name="select_format">Select Date Format</string>
    <string name="format_day_only">Day Only (Monday)</string>
    <string name="format_day_date">Day + Date (Monday, 15)</string>
    <string name="format_day_month">Day + Month (Monday, September)</string>
    <string name="format_full_date">Full Date (Monday, September 15)</string>
    <string name="format_short_date">Short Date (Mon, Sep 15)</string>
    <string name="format_numeric_date">Numeric Date (09/15/2024)</string>
    <string name="format_time_12h">12-Hour Time (3:30 PM)</string>
    <string name="format_time_24h">24-Hour Time (15:30)</string>
    <string name="format_day_time_12h">Day + 12h Time (Monday 3:30 PM)</string>
    <string name="format_day_time_24h">Day + 24h Time (Monday 15:30)</string>
    <string name="format_full_datetime">Full Date + Time (Mon, Sep 15, 3:30 PM)</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="preview">Preview</string>
    <string name="select_background">Select Background</string>
    <string name="select_font">Select Font</string>
    <string name="downloading_font">Downloading font...</string>
    <string name="font_downloaded">Font downloaded successfully</string>
    <string name="font_download_failed">Failed to download font</string>
</resources>
